Working on product stock modification for checkout and management.

--- a/browser/scss/management-shop/main.scss
+++ b/browser/scss/management-shop/main.scss
@@ -216,3 +216,9 @@ order-management {
 .order-management-number {
   width: 6em;
 }
+
+stock-modifier {
+  position: relative;
+  display: block;
+  height: auto;
+}
