--- a/browser/scss/directives/_main.scss
+++ b/browser/scss/directives/_main.scss
@@ -13,3 +13,5 @@
 @import 'search-options/main.scss';
 @import 'active-chat-panel/main.scss';
 @import 'chat-contact-tile/main.scss';
+@import 'user-order/main.scss';
+@import 'attendee-order-detail/main.scss';
