Working on emailing state for front end. Added New register emailing to the Register.factory after the savedUserData to database method.

--- a/browser/scss/main.scss
+++ b/browser/scss/main.scss
@@ -454,3 +454,4 @@ formatted-text {
 @import 'messaging/main';
 @import 'shop/main';
 @import 'management-shop/main';
+@import 'management-email/main';
