Finished working on full page notifications for authentication and shop loading.

--- a/browser/scss/directives/_main.scss
+++ b/browser/scss/directives/_main.scss
@@ -15,3 +15,4 @@
 @import 'chat-contact-tile/main.scss';
 @import 'user-order/main.scss';
 @import 'attendee-order-detail/main.scss';
+@import 'full-page-notification/main.scss';
