--- a/server/app/views/index.html
+++ b/server/app/views/index.html
@@ -22,6 +22,7 @@
   <body ng-app="FiveSquadronRNZAFApp">
     <header-bar></header-bar>
     <notification-panel></notification-panel>
+    <full-page-notification class="management-email-progress display-hidden"></full-page-notification>
     <div id="main" ui-view>
       <section class="state-transition-view">
         <h1>"Keitou Kalawaca Na Wasaliwa"</h1>
